provisioning/200_apps/overlays/k3d-example/whoami/ingress-localhost.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-localhost
spec:
  ingressClassName: traefik
  rules:
  - host: whoami.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami-svc
            port:
              number: 80
